Swagger, Link refactoring, Groups refactoring
