# api/index.js
@@ -9,7 +9,6 @@ require('dotenv').config();
 // 🚗 Routes
 const authRoute = require("./routes/auth");
 const usersRoute = require("./routes/users");
-const refreshTokenRoute = require("./routes/refreshToken");
 const groupsRoute = require("./routes/groups");   
 const spotifyRoute = require("./routes/spotify");
 
@@ -27,15 +26,15 @@ const app = express();
 // Body parser for POST requests
 app.use(express.json());
 
-// ===== API Routes =====
+// =====> API Routes
 app.use("/api/token", authRoute);
 app.use("/api/users", usersRoute);
 app.use("/api/groups", groupsRoute);
 
-// ===== API Spotify =====
-app.use('/api/refresh_token', refreshTokenRoute);
+// =====> API Spotify
+app.use('/api/spotify', spotifyRoute);
 
-// ===== Swagger Documentation =====
+// =====> Swagger Documentation
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile, { swaggerOptions: { persistAuthorization: true } }));
 
 swagger.Run();
