# api/routes/spotify.js
@@ -1,8 +1,9 @@
 const router = require("express").Router();
 const spotifyController = require("../controllers/spotify.js");
+const middleWare = require('../controllers/middleware.js')
 
 router.get("/refresh_token", spotifyController.refreshToken);
 router.get("/callback", spotifyController.callback);
-router.get("/link", spotifyController.link);
+router.get("/link", middleWare.verify, spotifyController.link);
 
 module.exports = router
