# api/swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "version": "1.0",
     "title": "YSpotify REST API",
-    "description": "A description."
+    "description": "\n⭐ Équipe :\n\n    • Injin Kim\n\n    • Nicolas Lépinay\n\n    • Matéo Palmieri\n\n    • Cyprien Siaud\n\n\n\n\n⭐ Fonctionnalités :\n\n    • FT-1 : Inscription\n\n    • FT-2 : Connexion\n\n    • FT-3 : Liaison du compte Spotify\n\n    • FT-4 : Rejoindre un groupe\n\n    • FT-5 : Consultation des groupes et des utilisateurs\n\n    • FT-6 : Personnalité de l'utilisateur\n\n    • FT-7 : Synchronisation\n\n    • FT-8 : Playlist\n\n"
   },
   "servers": [
     {
@@ -20,7 +20,8 @@
   "paths": {
     "/api/token/": {
       "get": {
-        "description": "",
+        "summary": "Connecter un utilisateur (FT-2)",
+        "description": "Génère un JSON Web Token pour l'authentification.",
         "parameters": [
           {
             "name": "Authorization",
@@ -53,7 +54,8 @@
     },
     "/api/users/": {
       "post": {
-        "description": "",
+        "summary": "Inscrire un utilisateur (FT-1)",
+        "description": "Crée un utilisateur dans la base de données.",
         "parameters": [],
         "responses": {
           "200": {
@@ -90,16 +92,37 @@
     },
     "/api/groups/": {
       "get": {
-        "description": "",
-        "parameters": [],
+        "summary": "Afficher les groupes (FT-5)",
+        "description": "Affiche la liste des groupes existants et leur taille.",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Vous n'êtes pas authentifié(e)."
+          },
+          "403": {
+            "description": "Le token est invalide."
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       },
       "post": {
-        "description": "",
+        "summary": "Rejoindre un groupe (FT-4)",
+        "description": "Rejoindre un groupe.",
         "parameters": [
           {
             "name": "authorization",
@@ -117,12 +140,17 @@
             "description": "Bad Request"
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Vous n'êtes pas authentifié(e)."
           },
           "403": {
-            "description": "Forbidden"
+            "description": "Le token est invalide."
           }
         },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -141,10 +169,11 @@
     },
     "/api/groups/members": {
       "get": {
-        "description": "",
+        "summary": "Afficher les détails de son groupe (FT-5 bis)",
+        "description": "Affiche le détail de membres du groupe auquel l'utilisateur appartient.",
         "parameters": [
           {
-            "name": "Authorization",
+            "name": "authorization",
             "in": "header",
             "schema": {
               "type": "string"
@@ -156,12 +185,20 @@
             "description": "OK"
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Vous n'êtes pas authentifié(e)."
+          },
+          "403": {
+            "description": "Vous n'appartenez à aucun groupe."
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
-    "/api/refresh_token/": {
+    "/api/spotify/refresh_token": {
       "get": {
         "description": "",
         "parameters": [
@@ -178,6 +215,66 @@
             "description": "OK"
           }
         }
+      }
+    },
+    "/api/spotify/callback": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "code",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "state",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/spotify/link": {
+      "get": {
+        "summary": "Lier l'utilisateur à un compte Spotify (FT-3)",
+        "description": "Lie l'utilisateur à un compte Spotify auquel il doit se connecter. Renvoie l'URL de connexion à Spotify.",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Requête valide. Connectez-vous à Spotify."
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Vous n'êtes pas authentifié(e)."
+          },
+          "403": {
+            "description": "Le token est invalide."
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     }
   },
